# Soda

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  starting-prompt.txt
extentions/: ChatGPT.py  JSTTime.py  aOCR.py  aclient.py  chat.py  communitytool.py  config.ini  config.py  convert_embeds.py  data_update.py  embed.py  event_handlers.py  evjson.py  keep_alive.py  log.py  maintenances.py  makeembed.py  moderate.py  moderates.py  modmails.py  multiplayertool.py  recruit.py  reminder.py  requests.py  responses.py  rhodo.py  supportrequest.py  twitterpost.py  voicechat.py  wikidb.py
extentions/components/: embed_template.json  important_points.json  rules.json  welcome_embeds.json
extentions/configs/: dynamic.json  dynamic_default.json
extentions/embeds/: embed_template.json  important_points.json  rules.json  welcome_embeds.json  welcome_first.json
extentions/jsons/: birthday.json  channels.json  chat.json  doctors.json  eventarchive.json  events.json  maintarchive.json  maintenances.json  modmail.json  modmail.txt  operator_emojis.json  operators.json  presets.json  punishments.json  reactions.json  redemption_codes.json  remindarchive.json  reminds.json  requests.json  scheduled_tasks.json  tweeted.json  voice_status.json
